# native-media

./: .gitignore  CMakeLists.txt  readme.md  readme.zh.md
jni/: com_litongjava_media_NativeMedia.h  native_media.h
src/: CMakeLists.txt  audio_file_utils.c  audio_file_utils.h  jni_merge.c  jni_native_mp3.c  jni_utils.c  jni_video_length.c  jni_video_watermark.c  mp4_test.c  native_media.c  native_media_av.c  native_media_av_convert.c  native_media_av_split.c  native_media_main.c  native_mp3.c  native_mp3.h  native_mp3_for_slience.c  native_mp3_split.c  native_mp4.c  native_mp4_to_hls.c  native_mp4_to_mp3.c  native_segment_mp4_to_hls.c  native_video_to_hls.c  pure_video_to_hls.c  test_native_media.c  utils.c
